Fixed ridiculous use of spacer divs and just centered and left aligned the content the right way

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -126,6 +126,7 @@
           color: #fff;
           border-style: none;
           text-transform: uppercase;
+          cursor: pointer;
         }
       }
     }
